[tool.poetry]
name = "apolloxe"
version = "0.1.0"
description = ""
authors = ["Rondou Chen <40and44sis@gmail.com>"]
packages = [
    { include = "login_view.py" },
    { include = "apolloxe" },
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
selenium = "^4.1.3"
webdriver-manager = "^3.5.4"
APScheduler = "^3.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
apollo = 'login_view:args'
